# multicloud-data-pipeline-hexagonal

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
docs/: 01-domain-model.md  02-tooling.md  03-application-ports.md  04-validate-and-ingest-use-case.md  05-local-filesystem-adapter.md  06-console-metrics-publisher.md  07-log-stub-notification-port.md  08-model-inference-port.md  09-sklearn-inference-adapter.md  10-postgres-repository-adapter.md  11-gcs-file-storage-adapter.md  12-s3-file-storage-adapter.md  README.md
src/application/ports/: __init__.py  dataset_repository.py  file_storage.py  metrics_publisher.py  model_inference_port.py  notification_port.py
src/application/use_cases/: __init__.py  validate_and_ingest_dataset.py
src/domain/: exceptions.py  models.py  rules.py
src/infrastructure/inference/: __init__.py  sklearn_model_inference.py
src/infrastructure/metrics/: __init__.py  console_metrics_publisher.py
src/infrastructure/notifications/: __init__.py  log_stub_notification_port.py
src/infrastructure/repository/: __init__.py  postgres_dataset_repository.py
src/infrastructure/storage/: __init__.py  gcs_file_storage.py  local_file_storage.py  (+1 more)
tests/domain/: test_exceptions.py  test_models.py  test_rules.py
tests/integration/: test_local_pipeline.py
wiki/: 01-Domain-Model.md  02-Tooling.md  03-Application-Ports.md  04-Validate-And-Ingest-Use-Case.md  05-Local-Filesystem-Adapter.md  06-Console-Metrics-Publisher.md  07-Log-Stub-Notification-Port.md  08-Model-Inference-Port.md  Glossary.md  Home.md  Roadmap.md
(+11 files in other folders)
