[project]
name = "multicloud-data-pipeline-hexagonal"
version = "0.1.0"
description = "Multi-cloud data ingestion and validation pipeline, built with hexagonal architecture as a learning project."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
sklearn = [
    "scikit-learn>=1.4",
]
postgres = [
    "psycopg[binary]>=3.1",
]
gcs = [
    "google-cloud-storage>=2.10",
]
s3 = [
    "boto3>=1.34",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
